--- a/백준/JAVA/src/algorithm/.gitignore
+++ b/백준/JAVA/src/algorithm/.gitignore
@@ -7,6 +7,8 @@
 /백준10971_외판원순회3.class
 /.metadata/
 /.class/
+/.classpath/
+/.project/
 /백준6603.class
 /백준6603_로또.class
 /백준6603_로또2.class
@@ -14,3 +16,6 @@
 /백준2529_부등호.class
 /백준2529_부등호2.class
 /백준2529_부등호3.class
+/백준1339_단어수학.class
+/백준1339_단어수학_시간초과.class
+/백준14888_연산자끼워넣기.class
