--- a/백준/JAVA/src/algorithm/.gitignore
+++ b/백준/JAVA/src/algorithm/.gitignore
@@ -19,3 +19,6 @@
 /백준1339_단어수학.class
 /백준1339_단어수학_시간초과.class
 /백준14888_연산자끼워넣기.class
+/백준14889_스타트와링크.class
+/백준14889.class
+/백준14889_스타트와링크2.class
